--- a/view/source/ui/MainUi.ui
+++ b/view/source/ui/MainUi.ui
@@ -361,18 +361,120 @@ QTabBar::tab:!selected:hover
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>73</width>
-             <height>32</height>
+             <width>478</width>
+             <height>631</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_2">
             <item>
-             <widget class="QLabel" name="stitchTextureLabel">
+             <widget class="QLabel" name="tabLabel2">
               <property name="text">
                <string/>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tabWidget3">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
+       <attribute name="title">
+        <string>Tab3</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QScrollArea" name="scrollArea">
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="tabInnerWidget3">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>478</width>
+             <height>631</height>
+            </rect>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_3">
+            <item>
+             <widget class="QLabel" name="tabLabel3">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tabWidget4">
+       <attribute name="title">
+        <string>Tab4</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_6">
+        <item>
+         <widget class="QScrollArea" name="scrollArea_2">
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="tabInnerWidget4">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>478</width>
+             <height>631</height>
+            </rect>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_4">
+            <item>
+             <widget class="QLabel" name="tabLabel4">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tabWidget5">
+       <attribute name="title">
+        <string>Tab5</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_7">
+        <item>
+         <widget class="QScrollArea" name="scrollArea_3">
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="tabInnerWidget5">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>478</width>
+             <height>631</height>
+            </rect>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_5">
+            <item>
+             <widget class="QLabel" name="label_3">
+              <property name="text">
+               <string/>
               </property>
              </widget>
             </item>
@@ -424,7 +526,7 @@ QTabBar::tab:!selected:hover
      <property name="title">
       <string>频率域滤波</string>
      </property>
-     <addaction name="GaussianBlurAct"/>
+     <addaction name="gaussianBlurAct"/>
      <addaction name="medianBlurAct"/>
      <addaction name="sobelAct"/>
      <addaction name="laplacianAct"/>
@@ -844,7 +946,7 @@ QTabBar::tab:!selected:hover
     <string>图像反转</string>
    </property>
   </action>
-  <action name="GaussianBlurAct">
+  <action name="gaussianBlurAct">
    <property name="text">
     <string>低通滤波</string>
    </property>
