--- a/view/source/ui/MainUi.ui
+++ b/view/source/ui/MainUi.ui
@@ -20,188 +20,152 @@
    <string>ImageOperation</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">/***********Menu**************/
+   <string notr="true">
+
+QWidget {
+       background:qlineargradient(spread:pad,x1:0,y1:0,x2:0,y2:1,stop:0 #708090,stop:1 #C8C8D0);
+       }
+
 QMenu {
-	border-image:url(D:/workspace/C/clothTexture/clothTexture/config/qss/style/images/5.png);
-	border:1px solid gray;
-	border-radius:3px;
-	min-width:60px;
-}
+       border-radius: 30px;
+       min-width: 100px;
+       min-height: 45px;
+       }
+QMenu::item {
+       min-width: 60px;
+       min-height: 40px;
+       padding: 2px 25px 2px 30px;
+       margin-left: 5px;
+       }
+QMenu::item:selected {
+       border-width:1px;
+       border-color: #516589;
+       background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(45,133,207), stop: 1.0 rgb(125,195,250));
+       color:#E6FFFF;
+       }
 
-QMenu::item {   
-    min-width:60px;
-    height:25px;
-    padding: 2px 25px 2px 30px;
-    margin-left: 5px;
-    /* color:#858E94; */
-    color:black
- }
+QPushButton {
+       min-width:100px;
+       min-height:40px;
+       border-radius:10px;
+       }
 
-QMenu::item:selected {  
-    border-width:1px;
-    border-color: #516589;
-    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                             stop: 0
-                             rgb(45,133,207),
-                             stop: 1.0 rgb(125,195,250));
-    color:#E6FFFF;
-}
-QMenu::item:disabled {   
-    color:gray;
-}
-
-/***********QWidget**************/
-QWidget
-{
-	background:qlineargradient(spread:pad,x1:0,y1:0,x2:0,y2:1,stop:0 #D8D9DE,stop:1 #C8C8D0);
-}
-
-/***********QScrollBar**************/
 QScrollBar:horizontal {
-    border: 1px solid #222222;
-    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0.0 #ffffff, stop: 0.5 #ffffff, stop: 1 #ffffff);
-    height: 7px;
-    margin: 0px 16px 0 16px;
-}
- 
-QScrollBar::handle:horizontal
-{
-    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #b1b1b1, stop: 0.5 #b3b3b3, stop: 1 #b1b1b1);
-    min-height: 20px;
-    border-radius: 2px;
-}
- 
+       border: 1px solid #222222;
+       background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0.0 #ffffff, stop: 0.5 #ffffff, stop: 1 #ffffff);
+       height: 7px;
+       margin: 0px 16px 0 16px;
+       }
+QScrollBar::handle:horizontal {
+       background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #b1b1b1, stop: 0.5 #b3b3b3, stop: 1 #b1b1b1);
+       min-height: 20px;
+       border-radius: 20px;
+       }
 QScrollBar::add-line:horizontal {
-    border: 1px solid #1b1b19;
-    border-radius: 2px;
-    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #999999, stop: 1 #999999);
-    width: 14px;
-    subcontrol-position: right;
-    subcontrol-origin: margin;
-}
- 
+       border: 1px solid #1b1b19;
+       border-radius: 20px;
+       background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #999999, stop: 1 #999999);
+       width: 14px;
+       subcontrol-position: right;
+       subcontrol-origin: margin;
+       }
 QScrollBar::sub-line:horizontal {
-    border: 1px solid #1b1b19;
-    border-radius: 2px;
-    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #999999, stop: 1 #999999);
-    width: 14px;
-    subcontrol-position: left;
-    subcontrol-origin: margin;
-}
- 
-QScrollBar::right-arrow:horizontal, QScrollBar::left-arrow:horizontal
-{
-    border: 1px solid black;
-    width: 1px;
-    height: 1px;
-    background: white;
-}
- 
-QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
-{
-    background: none;
-}
- 
-QScrollBar:vertical
-{
-    background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0.0 #ffffff, stop: 0.5 #ffffff, stop: 1 #ffffff);
-    width: 7px;
-    margin: 16px 0 16px 0;
-    border: 1px solid #222222;
-}
- 
-QScrollBar::handle:vertical
-{
-    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #b1b1b1, stop: 0.5 #b3b3b3, stop: 1 #b1b1b1);
-    min-height: 20px;
-    border-radius: 2px;
-}
- 
-QScrollBar::add-line:vertical
-{
-    border: 1px solid #1b1b19;
-    border-radius: 2px;
-    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #999999, stop: 1 #999999);
-    height: 14px;
-    subcontrol-position: bottom;
-    subcontrol-origin: margin;
-}
- 
-QScrollBar::sub-line:vertical
-{
-    border: 1px solid #1b1b19;
-    border-radius: 2px;
-    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #999999, stop: 1 #999999);
-    height: 14px;
-    subcontrol-position: top;
-    subcontrol-origin: margin;
-}
- 
-QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical
-{
-    border: 1px solid black;
-    width: 1px;
-    height: 1px;
-    background: white;
-}
- 
- 
-QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
-{
-    background: none;
-}
+       border: 1px solid #1b1b19;
+       border-radius: 20px;
+       background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 #999999, stop: 1 #999999);
+       width: 14px;
+       subcontrol-position: left;
+       subcontrol-origin: margin;
+       }
+QScrollBar::right-arrow:horizontal, QScrollBar::left-arrow:horizontal {
+       border: 1px solid black;
+       width: 1px;
+       height: 1px;
+       background: white;
+       }
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
+       background: none;
+       }
+QScrollBar:vertical {
+       background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0, stop: 0.0 #ffffff, stop: 0.5 #ffffff, stop: 1 #ffffff);
+       width: 7px;
+       margin: 16px 0 16px 0;
+       border: 1px solid #222222;
+       }
+QScrollBar::handle:vertical {
+       background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #b1b1b1, stop: 0.5 #b3b3b3, stop: 1 #b1b1b1);
+       min-height: 20px;
+       border-radius: 20px;
+       }
+QScrollBar::add-line:vertical {
+       border: 1px solid #1b1b19;
+       border-radius: 20px;
+       background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #999999, stop: 1 #999999);
+       height: 14px;
+       subcontrol-position: bottom;
+       subcontrol-origin: margin;
+       }
+QScrollBar::sub-line:vertical {
+       border: 1px solid #1b1b19;
+       border-radius: 20px;
+       background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #999999, stop: 1 #999999);
+       height: 14px;
+       subcontrol-position: top;
+       subcontrol-origin: margin;
+       }
+QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
+       border: 1px solid black;
+       width: 1px;
+       height: 1px;
+       background: white;
+       }
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+       background: none;
+       }
 
-/***********QTabWidget**************/
-QTabBar::tab {
-    color: #ffffff;
-    border: 1px solid #444;
-    border-bottom-style: none;
-    background-color: #999999;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 3px;
-    padding-bottom: 2px;
-    margin-right: -1px;
-}
-
- 
 QTabWidget::pane {
-    border: 1px solid #444;
-    top: 1px;
-}
- 
-QTabBar::tab:last
-{
-    margin-right: 0; 
-    border-top-right-radius: 3px;
-}
- 
-QTabBar::tab:first:!selected
-{
-    margin-left: 0px; 
-    border-top-left-radius: 3px;
-}
- 
-QTabBar::tab:!selected
-{
-    border-bottom-style: solid;
-    margin-top: 3px;
-    background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #212121, stop:.4 #737373);
-}
- 
-QTabBar::tab:selected
-{
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    margin-bottom: 0px;
-}
- 
-QTabBar::tab:!selected:hover
-{
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #212121, stop:0.4 #737373, stop:0.2 #999999, stop:0.1 #b1b1b1);
-}</string>
+       border: 1px solid #444;
+       top: 1px;
+       }
+
+QTabBar::tab {
+       color: #ffffff;
+       border: 1px solid #444;
+       border-bottom-style: none;
+       background-color: #999999;
+       padding-left: 10px;
+       padding-right: 10px;
+       padding-top: 3px;
+       padding-bottom: 2px;
+       margin-right: -1px;
+       min-width: 100px;
+       min-height: 35px;
+       }
+QTabBar::tab:last {
+       margin-right: 0;
+       border-top-right-radius: 3px;
+       }
+QTabBar::tab:first:!selected {
+       margin-left: 0px;
+       border-top-left-radius: 3px;
+       }
+QTabBar::tab:!selected {
+       border-bottom-style: solid;
+       margin-top: 3px;
+       background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #1874CD, stop:.4 #737373);
+       }
+QTabBar::tab:selected {
+       border-top-left-radius: 3px;
+       border-top-right-radius: 3px;
+       margin-bottom: 0px;
+       }
+QTabBar::tab:!selected:hover  {
+       border-top-left-radius: 3px;
+       border-top-right-radius: 3px;
+       background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #212121, stop:0.4 #737373, stop:0.2 #999999, stop:0.1 #b1b1b1);
+       }
+
+   </string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="enabled">
